--- a/public/scss/components/_off-canvas.scss
+++ b/public/scss/components/_off-canvas.scss
@@ -81,7 +81,7 @@
   }
 
   @include wcss-media(medium) {
-    top: $wcss-spacing-unit-huge + 30px;
+    top: $wcss-spacing-unit-huge + 70px;
     bottom: auto;
     width: auto;
     border-top-right-radius: 30px;
